# spike-redpanda-shiny

./: README.md  dev_kafka_producer.py  dev_shiny_app.py  docker-compose.yaml  pyproject.toml  requirements.txt
docker_deploy/flink/: Dockerfile
docker_deploy/flink/sql/: set_avg_values.sql
docker_deploy/kafka_producer/: Dockerfile  data_producer.py  entrypoint.py
docker_deploy/schemas_loader/: Dockerfile  entrypoint.sh
docker_deploy/schemas_loader/schemas/: meter_measurements-value.avsc
docker_deploy/shiny_app/: Dockerfile  entrypoint.py
src/app/: app_server.py  app_ui.py  config.py  run.py
src/app/helpers/: kafka.py
src/data_producer/: avro_parser.py  config.py  data_producer.py
src/helpers/container/: redpanda.py
tests/: conftest.py
tests/helpers/container/: redpanda.py
tests/src/data_producer/: test_data_producer.py  test_provisional.py  test_redpanda.py
